# diarkis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/cpp/: CMakeLists.txt
client/cpp/include/diarkis_client/: client.h  rpc.h  tcp.h
client/cpp/src/: client.cc  rpc.cc  tcp.cc
commands/: CMakeLists.txt
commands/diarkis/: commands.h
examples/: CMakeLists.txt  example.cc  example_usage.cpp
include/diarkis/: events.h  fs.h  fs_client.h  fs_operations.h  fs_replicator.h  fs_watcher.h  local_storage.h  raft_fs_service.h  raft_node.h  state_machine.h
src/: config.cc  error.cc  events.cpp  fs.cpp  fs_client.cpp  fs_operations.cpp  fs_replicator.cpp  fs_watcher.cpp  local_storage.cpp  main.cc  main.cpp  raft_fs_service.cpp  raft_node.cpp  rpc.cc  state_machine.cc  state_machine.cpp  storage.cc  tcp.cc
src/include/diarkis/: config.h  error.h  raft_closure.h  result.h  rpc.h  state_machine.h  storage.h  tcp.h
